--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,19 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//json
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.12.0'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.0'
+	//jdbc
+	implementation 'mysql:mysql-connector-java:8.0.13'
+	//tests
+	testImplementation 'junit:junit'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
